--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<p>La chouette agence est une page web design qui aide</p>
+				<p>les entreprises à devenir attractives et visibles sur Internet</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -154,7 +155,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<p>Nous travaillons avec beaucoup de clients,</p>
+				<p>voici nos réalisations</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
