--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p>La chouette agence est une page web design qui aide</p>
-				<p>les entreprises à devenir attractives et visibles sur Internet</p>
+				<p class="web">La chouette agence est une page web design qui aide</p>
+				<p class="web">les entreprises à devenir attractives et visibles sur Internet</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -125,7 +125,11 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<p class="web2">"La chouette agence est une excellente agence web! Les</p>
+				<p class="web2">web designer ont réussi à capturer l'essence de notre </p>
+				<p class="web2">entreprise et à l'intégrer à notre site. Cela nous a aidé à  </p>
+				<p class="web2">doubler nos ventes en ligne à Lyon."</p>
+				<p class="web1">Maxime Guibard, PDG de A vos fourchettes</p>
 
 			</div>
 		</div>
@@ -155,8 +159,8 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p>Nous travaillons avec beaucoup de clients,</p>
-				<p>voici nos réalisations</p>
+				<p class="web">Nous travaillons avec beaucoup de clients,</p>
+				<p class="web">voici nos réalisations</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
