--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a href="contact.html">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -79,35 +79,34 @@
 <div class="bloc bgc-white l-bloc" id="bloc-7">
 	<div class="container bloc-lg">
 		<div class="row">
-			<div class="col-sm-6">
-				<form id="form_1" novalidate  fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+			<div class="col-sm-6">				
 					<div class="form-group">
-						<label>
+						<label for="nom">
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="nom" class="form-control" type="text" name="nom" required/>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="mail">
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="mail" class="form-control" type="email" required name="mail"/>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="message">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="text" required id="message" name="message"/>
 					</div>
 					<div class="form-group">
-						<label>
+						<label for="brief">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+						</label>
+						<textarea id="brief" class="form-control" rows="4" cols="50" required name="brief"></textarea>
 					</div> 
-					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
-						Envoyer
-					</button>
-				</form>
+					<input class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit" value="ENVOYER">
+						
+					</button>				
 			</div>
 			<div class="col-sm-6">
 				<p>
