Mise à jour de la couleur

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="web">La chouette agence est une page web design qui aide</p>
-				<p class="web">les entreprises à devenir attractives et visibles sur Internet</p>
+				<p class="web">La chouette agence est une page web design qui aide les entreprises à devenir attractives et visibles sur Internet</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -125,10 +124,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p class="web2">"La chouette agence est une excellente agence web! Les</p>
-				<p class="web2">web designer ont réussi à capturer l'essence de notre </p>
-				<p class="web2">entreprise et à l'intégrer à notre site. Cela nous a aidé à  </p>
-				<p class="web2">doubler nos ventes en ligne à Lyon."</p>
+				<p class="web2">"La chouette agence est une excellente agence web! Les web designer ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
 				<p class="web1">Maxime Guibard, PDG de A vos fourchettes</p>
 
 			</div>
@@ -250,7 +246,7 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+					<div class="keywords" style="color:#B7440F;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
